--- a/service_product/package.json
+++ b/service_product/package.json
@@ -20,15 +20,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/elasticsearch": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/microservices": "^11.0.12",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.5.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "prisma": "^6.5.0",
