--- a/service_shipping/package.json
+++ b/service_shipping/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service_product",
+  "name": "service_shipping",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -20,23 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^8.17.1",
-    "@nestjs/elasticsearch": "^11.0.0",
-    "@nestjs/cache-manager": "2.3.0",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^4.0.1",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/mapped-types": "^2.1.0",
-    "@nestjs/microservices": "^11.0.12",
+    "@nestjs/microservices": "^11.0.9",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.3.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
-    "cache-manager": "5.7.6",
-    "cache-manager-redis-store": "2.0.0",
-    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "prisma": "^6.5.0",
+    "prisma": "^6.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
